--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,8 +8,7 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
-install:
-  - chmod +x gradlew
 
 build_script:
+  - chmod +x gradlew #  предоставление прав на запуск файла gradlew
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
